# map-reduce

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.proto  main.cpp  mapper_app.cc  mapreduce.cpp  mapreduce.h  master_app.cc  reducer_app.cc  utils.cpp  utils.h
grpc-docker-image/: Dockerfile
grpc-helloworld/: CMakeLists.txt  Dockerfile
grpc-helloworld/src/: helloworld_client.cc  helloworld_server.cc
src/: .clang-format  mapreduce-deployment.yml
src/common/: cloud-utils.cc  cloud-utils.h  cloud_utils.cc  cloud_utils.h  data-structures.cc  data-structures.h  health-checker.cc  health-checker.h  job-manager.cc  job-manager.h  load-balancer.cc  load-balancer.h  mapper.cc  mapper.h  mapreduce.cc  mapreduce.h  reducer.cc  reducer.h  test-utils.cc  test-utils.h  utils.cc  utils.h
src/fs/: gcloud-create.sh  input-big.txt  input-huge.txt  input2.txt  startup-script.sh  word-count-input1.txt  word-count-input2.txt  word_count_input.txt
src/mapper/: CMakeLists.txt  Dockerfile  gcloud-create.sh  gcloud-restart.sh  main.cc
src/master/: CMakeLists.txt  Dockerfile  gcloud-cleanup.sh  gcloud-create.sh  gcloud-restart.sh  health-checker.cc  health-checker.h  job-manager.cc  job-manager.h  load-balancer.cc  load-balancer.h  main.cc  startup-script.sh
src/proto/: mapreduce.proto
src/reducer/: CMakeLists.txt  Dockerfile  main.cc  startup-script.sh
src/test_mapper/: CMakeLists.txt  grep_mapper.cc  long_mapper.cc  mapper_inter_write_crashing.cc  mapper_inter_write_crashing.h  mapper_inter_write_crashing_huge.cc  mapper_randomly_crashing.cc  mapper_randomly_crashing.h  simple_mapper.cc  test_mapper.cc  word_count_mapper.cc
src/test_reducer/: CMakeLists.txt  long_reducer.cc  reducer_inter_write_crashing.cc  reducer_inter_write_crashing.h  reducer_inter_write_crashing_huge.cc  reducer_randomly_crashing.cc  reducer_randomly_crashing.h  simple_reducer.cc  test_reducer.cc  word_count_reducer.cc
src/tests/: CMakeLists.txt  Dockerfile  client.cc  count_words.sh  gcloud-create.sh  gen_synthetic_test.cc  run_client.sh  test_client.cc  testbed.cc  testbed.h
src/worker/: CMakeLists.txt  gcloud-cleanup.sh  gcloud-create.sh  gcloud-restart.sh  health-check-service.cc  health-check-service.h  main.cc  startup-script.sh
tests/: input.txt
